# BetterPythonLogger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.workflows/: publish.yml
src/BetterPythonLogger/: Logger.py  NoLoggerException.py
